[package]
name = "datasketches"
description = "Data Sketches - Rust"
version = "0.1.0"
edition = "2021"

# --------------------------------------------------------------------------------------------------

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

[profile.release]
debug = 1

[dev-dependencies]
tempfile = "3"
